--- a/index.html
+++ b/index.html
@@ -5,110 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steal a Brainrot Wiki & Checklist</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         /* --- General & Custom Roblox Block Theme --- */
         body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f0f9ff; /* sky-100 */
+            font-family: 'Source Sans Pro', sans-serif;
+            background-color: #238942; /* Roblox Green */
+            background-image:
+                radial-gradient(rgba(255, 255, 255, 0.15) 15%, transparent 16%),
+                radial-gradient(rgba(255, 255, 255, 0.15) 15%, transparent 16%);
+            background-size: 32px 32px;
+            background-position: 0 0, 16px 16px;
         }
         html {
             scroll-behavior: smooth;
         }
         .main-header {
-            color: #0369a1; /* sky-700 */
+            color: #1e40af; /* blue-800 */
+            text-shadow: 1px 1px #a5f3fc; /* cyan-200 */
         }
 
         /* --- Panel & Card Styling --- */
         .roblox-panel {
             background-color: white;
-            border: 2px solid #d4d4d8; /* gray-300 */
-            border-bottom-width: 5px;
-            border-right-width: 5px;
-            border-radius: 0.5rem; /* rounded-lg */
+            border: 3px solid #4b5563; /* gray-600 */
+            border-bottom-width: 6px;
+            border-right-width: 6px;
+            border-radius: 0.25rem; /* rounded-sm */
             padding: 2rem;
             box-shadow: none;
         }
 
         .brainrot-card {
-            background-color: #fafafa; /* gray-50 */
-            border: 2px solid #d4d4d8; /* gray-300 */
+            background-color: #f9fafb; /* gray-50 */
+            border: 2px solid #6b7280; /* gray-500 */
             border-bottom-width: 5px;
             border-right-width: 5px;
+            border-radius: 0.25rem;
             transition: transform 0.15s ease-out;
         }
         .brainrot-card:hover {
-            transform: translateY(-3px) translateX(-1px);
-            border-color: #a1a1aa; /* gray-400 */
+            transform: translateY(-4px) translateX(-2px);
+            border-color: #1f2937; /* gray-800 */
         }
         .brainrot-card.owned {
-            opacity: 0.7;
-            background-color: #f0fdf4; /* green-50 */
-            border-color: #22c55e; /* green-500 */
+            opacity: 0.8;
+            background-color: #ecfdf5; /* emerald-50 */
+            border-color: #10b981; /* emerald-500 */
         }
 
         /* --- Sidebar Styling --- */
         .sidebar {
-            background-color: #e5e7eb; /* gray-200 */
-            border-right: 2px solid #d4d4d8;
+            background-color: #dc2626; /* red-600 */
+            border-right: 3px solid #991b1b; /* red-800 */
+            color: white;
+        }
+        .sidebar h1 {
+            color: white;
+            text-shadow: 2px 2px #991b1b;
         }
         .sidebar-link {
-            border-radius: 0.375rem; /* rounded-md */
+            border-radius: 0.25rem;
             transition: all 0.2s ease;
-            font-weight: 500;
+            font-weight: 600;
+            color: white;
         }
         .sidebar-link:hover {
-            background-color: #d4d4d8; /* gray-300 */
+            background-color: #ef4444; /* red-500 */
         }
         .sidebar-link.active {
-            background-color: white;
-            color: #111827; /* dark gray */
+            background-color: #f9fafb;
+            color: #dc2626; /* red-600 */
             font-weight: 700;
-            border: 2px solid #d4d4d8;
-            border-bottom-width: 4px;
-            border-right-width: 4px;
+            border: 3px solid #991b1b;
+            border-bottom-width: 5px;
+            border-right-width: 5px;
         }
 
         /* --- Filter Buttons & Inputs Styling --- */
         .filter-btn {
-            border-radius: 0.375rem;
+            border-radius: 0.25rem;
             font-weight: 600;
             background-color: white;
-            border: 2px solid #d4d4d8;
+            color: #4b5563;
+            border: 2px solid #6b7280;
             border-bottom-width: 4px;
             transition: all 0.1s ease-in-out;
         }
         .filter-btn:hover {
-            background-color: #f4f4f5; /* gray-100 */
+            background-color: #f3f4f6;
         }
         .filter-btn.active {
-            background-color: #0ea5e9; /* sky-500 */
+            background-color: #3b82f6; /* blue-500 */
             color: white;
-            border-color: #0284c7; /* sky-600 */
+            border-color: #1d4ed8; /* blue-700 */
             transform: translateY(2px);
             border-bottom-width: 2px;
         }
 
         #search-input {
             border-width: 2px;
-            border-radius: 0.375rem;
-            border-color: #d4d4d8;
+            border-radius: 0.25rem;
+            border-color: #9ca3af;
         }
         #search-input:focus {
-            border-color: #0ea5e9; /* sky-500 */
+            border-color: #3b82f6;
             box-shadow: none;
             outline: none;
         }
-
+        
         /* --- Checkbox Styling --- */
         .brainrot-checkbox {
             cursor: pointer;
             transform: scale(1.4);
             border-radius: 4px;
-            border-color: #a1a1aa;
+            border-color: #6b7280;
         }
         .brainrot-checkbox:checked {
-            background-color: #0ea5e9;
+            background-color: #3b82f6;
+            border-color: #1d4ed8;
         }
     </style>
 </head>
@@ -117,7 +132,7 @@
     <div class="flex flex-col md:flex-row min-h-screen">
         <!-- Sidebar Navigation -->
         <aside class="sidebar w-full md:w-64 p-6 md:sticky md:top-0 md:h-screen overflow-y-auto">
-            <h1 class="text-2xl font-bold text-gray-800 mb-6">S.A.B. Wiki</h1>
+            <h1 class="text-3xl font-bold mb-6">S.A.B. Wiki</h1>
             <nav>
                 <ul class="space-y-2" id="sidebar-nav">
                     <li><a href="#about" class="sidebar-link block px-4 py-2">About the Game</a></li>
@@ -136,11 +151,11 @@
                 <!-- About the Game Section -->
                 <section id="about" class="mb-12 scroll-mt-20">
                     <div class="roblox-panel">
-                        <h2 class="main-header text-3xl font-bold mb-4 border-b pb-2">About Steal a Brainrot</h2>
-                        <p class="text-lg leading-relaxed text-gray-700 mb-4">
+                        <h2 class="main-header text-4xl font-bold mb-4 border-b pb-2">About Steal a Brainrot</h2>
+                        <p class="text-md leading-relaxed text-gray-700 mb-4">
                            Steal a Brainrot has a myriad of Italian brainrot characters across various rarities that determine the amount of money you can generate every second. Now, you must be very strategic while playing this game, as you need to choose what brainrot to purchase. Steal a Brainrot also applies select traits and mutations to brainrots to boost your money-making power.
                         </p>
-                        <p class="text-lg leading-relaxed text-gray-700">
+                        <p class="text-md leading-relaxed text-gray-700">
                            Currently, Steal a Brainrot has 8 rarities of brainrots: Common, Rare, Epic, Legendary, Mythic, Brainrot God, Secret, and OG. There are a total of 150+ brainrots in Steal a Brainrot across these seven rarities, along with four mutation variants: Gold, Diamond, Rainbow, and Galaxy. Buying the best and rarest brainrots takes time, so you’ll have to start with common characters like Noobini Pizzanini. You will have to gradually work up the ladder to finally be able to buy the Secret brainrots like Nuclearo Dinossauro and Strawberry Elephant.
                         </p>
                     </div>
@@ -149,10 +164,10 @@
                 <!-- Brainrots Section -->
                 <section id="brainrots" class="mb-12 scroll-mt-20">
                     <div class="roblox-panel">
-                        <h2 class="main-header text-3xl font-bold mb-4 border-b pb-2">Brainrot Checklist</h2>
+                        <h2 class="main-header text-4xl font-bold mb-4 border-b pb-2">Brainrot Checklist</h2>
                         
                         <!-- Filter and Progress Bar -->
-                        <div class="mb-6 flex flex-col md:flex-row items-center justify-between gap-4 p-4 bg-gray-50 rounded-lg">
+                        <div class="mb-6 flex flex-col md:flex-row items-center justify-between gap-4 p-4 bg-gray-100 rounded-md">
                              <input type="text" id="search-input" placeholder="Search for a Brainrot..." class="w-full md:w-auto p-2 transition">
                             <div class="flex-shrink-0" id="progress-counter" class="font-semibold text-lg text-gray-800"></div>
                             <div class="flex items-center gap-2">
@@ -171,7 +186,7 @@
                 <!-- Strategies Section -->
                 <section id="strategies" class="mb-12 scroll-mt-20">
                     <div class="roblox-panel">
-                        <h2 class="main-header text-3xl font-bold mb-4 border-b pb-2">Strategies & Tips</h2>
+                        <h2 class="main-header text-4xl font-bold mb-4 border-b pb-2">Strategies & Tips</h2>
                         <p class="mt-4 text-gray-700 leading-relaxed">
                             New players should focus on Common Brainrots to learn the mechanics. Advanced players can try "Brainrot Chaining"—stealing multiple Brainrots in a single run for massive rewards, but with significantly increased risk.
                         </p>
@@ -181,7 +196,7 @@
                 <!-- Craft Machine Section -->
                 <section id="crafting" class="mb-12 scroll-mt-20">
                     <div class="roblox-panel">
-                        <h2 class="main-header text-3xl font-bold mb-4 border-b pb-2">Craft Machine Exclusives</h2>
+                        <h2 class="main-header text-4xl font-bold mb-4 border-b pb-2">Craft Machine Exclusives</h2>
                         <p class="mt-4 text-gray-700 leading-relaxed mb-4">
                             The following Brainrots can only be obtained through the Craft Machine.
                         </p>
@@ -208,7 +223,7 @@
                 <!-- Removed Section -->
                 <section id="removed" class="mb-12 scroll-mt-20">
                     <div class="roblox-panel">
-                        <h2 class="main-header text-3xl font-bold mb-4 border-b pb-2">Removed Brainrots</h2>
+                        <h2 class="main-header text-4xl font-bold mb-4 border-b pb-2">Removed Brainrots</h2>
                         <p class="mt-4 text-gray-700 leading-relaxed mb-4">
                             These Brainrots are no longer obtainable in the game.
                         </p>
@@ -297,7 +312,7 @@
             // Brainrot God
             { name: "Cocofanto Elefanto", rarity: "Brainrot God", price: "5M", mps: "17.5K" },
             { name: "Girafa Celestre", rarity: "Brainrot God", price: "7.5M", mps: "20K" },
-            { name: "Chihuahini Taconini", rarity: "Brainrot God", price: "8.5M", mps: "45K", image: "<img src='https://placehold.co/200x100/e2e8f0/475569?text=Chihuahua+Taco' alt='Chihuahini Taconini' class='rounded'>" },
+            { name: "Chihuahini Taconini", rarity: "Brainrot God", price: "8.5M", mps: "45K" },
             { name: "Tralalero Tralala", rarity: "Brainrot God", price: "10M", mps: "50K" },
             { name: "Los Crocodilitos", rarity: "Brainrot God", price: "12.5M", mps: "55K", notes: "Spawned during Bombardiro Crocodilo ritual" },
             { name: "Los Orcaleritos", rarity: "Brainrot God", price: "45M", mps: "235K", notes: "Spawned during Orcalero Orcala ritual (Fuse Machine)" },
@@ -398,6 +413,14 @@
             const filterButtons = document.querySelectorAll('.filter-btn');
             const searchInput = document.getElementById('search-input');
 
+            // Add image placeholders automatically
+            brainrotData.forEach(brainrot => {
+                if (!brainrot.image) {
+                    const imageName = encodeURIComponent(brainrot.name);
+                    brainrot.image = `<img src='https://placehold.co/200x100/e5e7eb/4b5563?text=${imageName}' alt='${brainrot.name}' class='rounded-sm w-full h-auto object-cover mt-2 border-2 border-gray-300'>`;
+                }
+            });
+
             let ownedBrainrots = JSON.parse(localStorage.getItem('ownedBrainrots')) || [];
 
             function getCleanRarity(rarity) {
@@ -410,7 +433,7 @@
 
             function createCard(brainrot) {
                 const card = document.createElement('div');
-                card.className = 'brainrot-card p-4 rounded-lg relative flex flex-col';
+                card.className = 'brainrot-card p-4 relative flex flex-col';
                 card.dataset.name = brainrot.name;
 
                 const isOwned = ownedBrainrots.includes(brainrot.name);
@@ -425,7 +448,7 @@
                         ${brainrot.image ? `<div class="my-2">${brainrot.image}</div>` : ''}
                         ${brainrot.notes ? `<p class="text-xs text-gray-600 italic mt-1">${brainrot.notes}</p>` : ''}
                     </div>
-                    <div class="mt-auto pt-2 border-t border-gray-200">
+                    <div class="mt-auto pt-2 border-t-2 border-gray-200">
                         <p class="text-sm text-gray-700"><span class="font-semibold">Buy Price:</span> ${brainrot.price}</p>
                         <p class="text-sm text-gray-700"><span class="font-semibold">MPS:</span> ${brainrot.mps}</p>
                     </div>
